...
    <string name="all_ok">OK</string>
    <string name="all_allow">Allow</string>
    <string name="all_deny">Deny</string>
    <string name="all_close">Close</string>
    <string name="all_continue">Continue</string>

    <string name="diagnosis_title">Report your infection</string>
    <string name="diagnosis_body1">You will need a key code to report your infection. You will receive a key code from a healthcare professional or via text message from the Finnish Institute for Health and Welfare if your COVID-19 test by a healthcare services comes back positive. Not all areas send unlock codes.</string>
    <string name="diagnosis_body2">Enter the key code on the phone you usually carry with you. Koronavilkku indicates potential exposure to users who have been close to you during the period when you could have infected others. The key code does not reveal your identity.</string>
    <string name="diagnosis_page_title">Report your infection</string>
    <string name="diagnosis_code_entry">Report your infection</string>
    <string name="diagnosis_en_disabled">Exposure notifications must be turned on to report an infection. Enable exposure notifications in the Koronavilkku Home view.</string>

...

    <string name="exposure_check_error_title">Error loading exposure data</string>
    <string name="exposure_check_error_message">Exposure data could not be loaded. Please check your internet connection and try again.</string>

    <string name="share_consent_eu">Users of Koronavilkku and other European COVID-19 applications.</string>
    <string name="share_consent_finland">Users of Koronavilkku only.</string>
    <string name="share_consent_header">Select who Koronavilkku notifies of potential exposure.</string>
    <string name="share_consent_code_saved">Koronavilkku got your key code from a text message.</string>

    <string name="travel_disclosure_header">Have you travelled abroad within the past 14 days?</string>
    <string name="travel_disclosure_no">I have not travelled.</string>
    <string name="travel_disclosure_yes">I have travelled.</string>

    <string name="country_list_title">Where have you travelled?</string>
    <string name="country_selection_body">Which countries have you visited within the past 14 days? If the country you visited is not listed or you do not want to disclose it, select Other.</string>
    <string name="country_selection_other">Other</string>

    <string name="summary_consent_header">Confirm and send</string>
    <string name="summary_consent_continue">Enter your key code</string>
    <string name="summary_consent_body_eu">Information about your infection will be shared anonymously with users of Koronavilkku and other European COVID-19 applications.</string>
    <string name="summary_consent_body_finland">Information about your infection will be shared anonymously with users of Koronavilkku.</string>
    <string name="summary_consent_travel_header">Travel information</string>
    <string name="summary_consent_travel_body">You have visited these countries within the past 14 days:</string>
    <string name="summary_consent_travel_body_none">You have not travelled abroad within the past 14 days.</string>
    <string name="summary_consent_accept_header">Consent</string>
    <string name="summary_consent_accept_use">My encounter data and the estimated period of when I could have infected others may be shared with Koronavilkku for the purpose of breaking transmission chains.\n\nI give this consent voluntarily. My consent has not been required in a healthcare customer service situation nor in a procedure of authority.</string>
    <string name="summary_consent_accept_share">My encounter data, the travel information I have selected above, and the estimated period of when I could have infected others may be shared to COVID-19 applications used in the EU, EEA, Switzerland and the United Kingdom for the purpose of breaking transmission chains.</string>
    <string name="summary_consent_no_cancellation">Once you have sent the information, you cannot withdraw your consent.</string>

    <string name="notification_guide_title">If you receive an exposure notification follow these instructions</string>
    <string name="notification_guide_text_1">If you have been near a person who has reported their coronavirus infection via the application, you will receive a notification of potential exposure to your phone. Tap on the notification to open Koronavilkku.</string>
    <string name="notification_guide_text_2">Press the red See instructions button.</string>
    <string name="notification_guide_text_3">You will receive instructions on what to do. Also read the local instructions on the website of your municipality of residence. If you need healthcare services, press the Contact button.</string>
...
