<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable name="model" type="fi.thl.koronahaavi.common.ChoiceData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/layout_toolbar" layout="@layout/toolbar"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="60dp">

                <TextView
                    android:id="@+id/text_choice_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:textAppearance="?attr/textAppearanceHeadline3"
                    tools:text="@tools:sample/lorem"
                    />

                <TextView
                    android:id="@+id/text_choice_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:text="@tools:sample/lorem"
                    />

                <RadioGroup
                    android:id="@+id/radio_group_choice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:clipToPadding="false"
                    android:checkedButton="@={model.selectedControl}">

                    <RadioButton
                        android:id="@+id/radio_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Vilkku.RadioButton.Card"
                        tools:text="@tools:sample/lorem"
                        />
                    <RadioButton
                        android:id="@+id/radio_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        style="@style/Widget.Vilkku.RadioButton.Card"
                        tools:text="@tools:sample/lorem"
                        />
                </RadioGroup>

                <TextView
                    android:id="@+id/text_choice_footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/textDarkGrey"
                    tools:text="@tools:sample/lorem"
                    />

            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/shape_background_fade_top">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_choice_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                style="@style/Widget.Vilkku.Button.Opaque"
                android:text="@string/all_continue"
                android:enabled="@{model.selectedChoice != null}"
                />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>