<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable name="model" type="fi.thl.koronahaavi.diagnosis.DiagnosisViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".diagnosis.DiagnosisFragment"
            tools:ignore="MissingConstraints"
            android:padding="20dp">

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="image_diagnosis_locked,text_diagnosis_locked_title"
                android:visibility="@{model.showLocked ? View.VISIBLE : View.GONE}"
                tools:visibility="gone"/>

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:flow_verticalGap="10dp"
                app:constraint_referenced_ids="text_diagnosis_title,
                text_diagnosis_body1,
                text_diagnosis_body2,
                button_diagnosis_start"
                android:visibility="@{model.allowStart==true ? View.VISIBLE : View.GONE}"
                tools:visibility="visible"
                />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:flow_verticalGap="20dp"
                app:constraint_referenced_ids="image_diagnosis_locked,
                text_diagnosis_locked_title,
                text_diagnosis_locked_body1"
                android:visibility="@{model.showLocked==true ? View.VISIBLE : View.GONE}"
                tools:visibility="gone"
                />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:flow_verticalGap="20dp"
                app:constraint_referenced_ids="image_diagnosis_en_disabled,text_diagnosis_en_disabled"
                android:visibility="@{model.showDisabled==true ? View.VISIBLE : View.GONE}"
                tools:visibility="gone"
                />

            <TextView
                android:id="@+id/text_diagnosis_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/diagnosis_page_title"
                android:textAppearance="?attr/textAppearanceHeadline1"
                />
            <TextView
                android:id="@+id/text_diagnosis_body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/diagnosis_body1"
                android:textAppearance="?attr/textAppearanceHeadline4"
                />
            <TextView
                android:id="@+id/text_diagnosis_body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="70dp"
                android:text="@string/diagnosis_body2"
                android:textAppearance="?attr/textAppearanceBody2"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_diagnosis_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis_code_entry"
                android:visibility="@{model.allowStart ? View.VISIBLE : View.GONE}"
                />

            <ImageView
                android:id="@+id/image_diagnosis_locked"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:paddingTop="100dp"
                android:src="@drawable/ic_ok_complete"
                android:contentDescription="@string/diagnosis_locked_image_description"
                />
            <TextView
                android:id="@+id/text_diagnosis_locked_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis_locked_title"
                android:textAppearance="?attr/textAppearanceHeadline3"
                android:gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/text_diagnosis_locked_body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis_locked_body1"
                android:textAppearance="?attr/textAppearanceBody2"
                android:gravity="center_horizontal"
                />

            <ImageView
                android:id="@+id/image_diagnosis_en_disabled"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:paddingTop="100dp"
                android:src="@drawable/ic_radar_off"
                android:contentDescription="@string/home_status_system_disabled"
                />
            <TextView
                android:id="@+id/text_diagnosis_en_disabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis_en_disabled"
                android:textAppearance="?attr/textAppearanceBody2"
                android:gravity="center_horizontal"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>