...
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:flow_verticalGap="20dp"
            app:constraint_referenced_ids="image_diagnosis_complete,
            text_diagnosis_complete_title,
            text_diagnosis_complete_body,
            button_diagnosis_complete_continue"
            />
        <ImageView
            android:id="@+id/image_diagnosis_complete"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/ic_ok_complete"
...
